[package]
name = "event-watcher"
version = "0.1.0"
authors = ["shiki <shiki.tak@gmail.com>"]
edition = "2018"

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
ethabi = "7.0.0"
futures = "0.1.27"
tokio = "0.1.21"
serde = { version="1.0.90", features = ["derive"] }
ethereum-types = "0.5.2"
