[package]
name = "feature"
version = "0.1.0"
authors = ["shiki <shiki.tak@gmail.com>"]
edition = "2018"

[dependencies]
chrono = ""
redis = "0.10.0"
# TODO: create util mod
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

client = { package = "client", path = "../client/" }
model = { package = "model", path = "../model/" }
